--- a/css/animate.css
+++ b/css/animate.css
@@ -9,17 +9,20 @@
 }
 
 #all:hover {
+	transform: scaleX(2) rotate(20deg) skew(10deg);
 	background-color: lightblue;
-	transform: scaleX(2);
-	transform: rotate(10deg);
 }
 
 @keyframes moved {
-    0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:yellow; left:200px; top:0px;}
-    50%  {background-color:blue; left:200px; top:200px;}
-    75%  {background-color:green; left:0px; top:200px;}
-    100% {background-color:red; left:0px; top:0px;}
+ 	from {
+ 		background-color: red;
+ 		transform:rotate(0deg);
+ 	}
+    to {
+    	background-color: yellow;
+    	transform:rotate(360deg);
+    }
+ 
 }
 
 #animate {
@@ -28,6 +31,23 @@
     position: relative;
     background-color: red;
     animation-name: moved;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
+}
+
+@keyframes movebrah {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+}
+
+#leftToRight {
+	animation-name: movebrah;
+	animation-duration: 4s;
+	animation-iteration-count: infinite;
+	position: relative;
+    background-color: red;
+}
+
+#leftToRight:hover {
+	background-color: blue;
 }
